kubernetes/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: incident-portal
  labels:
    app.kubernetes.io/part-of: incident-management-portal
